# fastapi-component

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish-pypi.yml
docs/superpowers/specs/: 2026-07-23-component-routes-design.md
fastapi_component/: __init__.py  app.py  dependencies.py  lifespan.py  routing.py
fastapi_component/tests/: helpers.py  test_create_app.py  test_dependencies.py  test_lifespan.py  test_routing.py
