[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-component"
version = "0.2.0"
description = "FastAPI integration for python-components: run a component System inside the application lifespan"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["fastapi", "component", "lifecycle", "lifespan", "dependency-injection", "system"]
authors = [
    { name = "Lucas Sant'Anna", email = "lucassant95@gmail.com" }
]
maintainers = [
    { name = "Lucas Sant'Anna", email = "lucassant95@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "python-components>=0.4.0,<0.5",
]

[project.urls]
Homepage = "https://github.com/lucassant95/fastapi-component"
Documentation = "https://github.com/lucassant95/fastapi-component#readme"
Repository = "https://github.com/lucassant95/fastapi-component"
Issues = "https://github.com/lucassant95/fastapi-component/issues"
Changelog = "https://github.com/lucassant95/fastapi-component/releases"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.hatch.build.targets.wheel]
packages = ["fastapi_component"]
exclude = ["fastapi_component/tests"]
